Fixed the company section alignment

--- a/styles.css
+++ b/styles.css
@@ -172,13 +172,13 @@ header {
 
 .company {
   position: relative;
-  background: linear-gradient(180deg, #ff4422 20%, rgba(255, 68, 34, 0.08) 25%, rgb(238, 209, 203) 25%);
+  background: linear-gradient(180deg, #ff4422 15%, rgb(248, 217, 217) 5%);
   margin: auto 15px;
 }
 
 .comp-title {
   display: block;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   margin: 0.5rem 0 0 5rem;
   color: white;
 }
@@ -189,22 +189,42 @@ header {
   color: #333;
 }
 
-.test {
-  display: block;
-  margin: 1rem 0 0 1rem;
-  color: #333;
+.seed {
+  color: gray;
+  font-size: 0.6rem;
 }
 
-.test-2 {
+.labels {
+  display: block;
+  padding: 1rem 0 1rem 1rem;
+  color: #333;
+  list-style: none;
+  border-bottom: 1px solid #ff4422;
+}
+
+.lighter {
+  background: #f8eae7;
+}
+
+.labels li {
+  padding-bottom: 0.7rem;
+}
+
+.labels i {
+  padding-right: 0.8rem;
+
+}
+
+.label2,
+.label3 {
   display: block;
   padding: 1rem 0 0 1rem;
   color: #333;
 }
 
-.test-3 {
-  display: block;
-  margin: 1rem 0 0 1rem;
+.label3 {
   color: rgb(165, 161, 161);
+  padding-bottom: 1rem;
 }
 
 .company img {
